@@ -1,3 +1,8 @@
+2012-05-13  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: enhancement: mkvmerge was optimizied to keep cluster
+	timecodes strictly increasing in most situations.
+
 2012-04-24  Moritz Bunkus  <moritz@bunkus.org>
 
 	* all: Added a translation to Polish by Daniel (see AUTHORS).
